<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Github User Finder</string>
    <string name="btn_search_action">Search</string>
    <string name="btn_ok_action">OK</string>
    <string name="hint_keyword">Enter your search keyword</string>
    <string name="message_get_user_keyword_empty_error">Keyword must not be empty</string>
    <string name="message_get_user_empty_result_error">Search result empty, please try another keyword</string>
    <string name="message_get_user_error">Retrieve user error occurred, Please try again</string>
</resources>