<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_side_margin"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:layout_marginEnd="@dimen/default_side_margin"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:gravity="center"
        tools:text="Message here" />

    <Button
        android:id="@+id/btnErrorOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:text="@string/btn_ok_action" />

</LinearLayout>
