...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_side_margin"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:layout_marginEnd="@dimen/default_item_margin"
        android:singleLine="true"
        android:hint="@string/hint_keyword"
        app:layout_constraintBottom_toBottomOf="@id/btnSearch"
        app:layout_constraintEnd_toStartOf="@id/btnSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:hint="Hint Here" />

    <Button
...
